[gd_scene load_steps=8 format=3 uid="uid://benw4o3k14icf"]

[ext_resource type="Script" path="res://Scripts/beginGame.gd" id="1_2hpca"]
[ext_resource type="Texture2D" uid="uid://g203lyvvw7f8" path="res://Sprites/Misc/spr_playBtn.png" id="1_p6fvg"]
[ext_resource type="Texture2D" uid="uid://dxy18wo8suk58" path="res://Sprites/Misc/spr_playBtnAura.png" id="2_4ju8c"]
[ext_resource type="PackedScene" uid="uid://bfpeigsp2n26i" path="res://Objects/FX/JumpDust.tscn" id="2_4rlxk"]
[ext_resource type="PackedScene" uid="uid://3iwgr23dc4ir" path="res://Scenes/FX/judgement.tscn" id="3_8cf2r"]
[ext_resource type="Texture2D" uid="uid://blrmjhbd22gks" path="res://Sprites/Misc/spr_disclaimer.png" id="6_ko2kw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6w037"]
radius = 32.0

[node name="BeginGame" type="Node2D"]
script = ExtResource("1_2hpca")

[node name="JumpDust" parent="." instance=ExtResource("2_4rlxk")]
visible = false
position = Vector2(112, 104)

[node name="judgement" parent="." instance=ExtResource("3_8cf2r")]
position = Vector2(56, 176)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -14.0
offset_top = -14.0
offset_right = 969.0
offset_bottom = 550.0
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="SprPlayBtn" type="Sprite2D" parent="."]
position = Vector2(480, 288)
texture = ExtResource("1_p6fvg")

[node name="SprPlayBtnAura" type="Sprite2D" parent="."]
position = Vector2(480, 288)
texture = ExtResource("2_4ju8c")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(480, 288)
shape = SubResource("CircleShape2D_6w037")

[node name="SprDisclaimer" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("6_ko2kw")
centered = false

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
